AR: sistemate molteplicita'/navigabilita' relazioni, sistemata indentazione elenchi numerati

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -220,12 +220,12 @@ Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
 \paragraph{Scopo e descrizione sintetica}
 L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso il browser, che richiede la relativa pagina al server HTTP.
 \paragraph{Flusso di eventi}
-\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item L'utente inserisce l'URL relativo all'applicazione nel browser.
 \item Il browser richiede la pagina al server HTTP
 \item Il server HTTP invia la pagina.
 \item Il browser visualizza la pagina.
-\end{enumerate}
+\end{elenconumerato}
 \paragraph{Flusso alternativo}
 Se viene rilevato un browser non supportato, l'utente viene avvisato. L'utente pu\`o decidere di continuare lo stesso senza nessuna garanzia di corretto funzionamento.
 \paragraph{Precondizioni} Il browser \'e avviato.
@@ -338,11 +338,11 @@ Il sistema permette all'utente di esportare in formato SVG il contenuto del canv
 \paragraph{Scopo e descrizione sintetica} 
 Il sistema permette all'utente di caricare file in formato SVG nel canvas.
 \paragraph{Flusso di eventi}
-\begin{enumerate}
+\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item L'utente seleziona il comando per caricare il file SVG.
 \item L'utente seleziona il file SVG.
 \item Il sistema visualizza il file SVG nel canvas. Se il file contiene elementi o attributi non supportati, essi saranno ignorati.
-\end{enumerate}
+\end{elenconumerato}
 \paragraph{Flusso alternativo}
 Se il file non pu\`o essere caricato o a causa di un errore in lettura o perch\`e non \'e un file SVG, l'utente viene avvisato dell'errore e l'applicazione ritorna allo stato precedente l'esecuzione del comando.
 \paragraph{Precondizioni} Il canvas \'e visualizzato.
