--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -222,12 +222,12 @@ Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
 \paragraph{Scopo e descrizione sintetica}
 L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso il browser, che richiede la relativa pagina al server HTTP.
 \paragraph{Flusso di eventi}
-\begin{elenconumerato}[\textbf{}]{\subsubsecindent}
+\begin{enumerate}
 \item L'utente inserisce l'URL relativo all'applicazione nel browser.
 \item Il browser richiede la pagina al server HTTP
 \item Il server HTTP invia la pagina.
 \item Il browser visualizza la pagina.
-\end{elenconumerato}
+\end{enumerate}
 \paragraph{Flusso alternativo}
 Se viene rilevato un browser non supportato, l'utente viene avvisato. L'utente pu\`o decidere di continuare lo stesso senza nessuna garanzia di corretto funzionamento.
 \paragraph{Precondizioni} Il browser \'e avviato.
