PQ: sistemato alpha/beta test

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -208,10 +208,10 @@ L'amministratore del progetto deve assicurarsi che gli standard descritti nelle 
 \sezione{Pianificazione ed esecuzione del collaudo}
 
 \subsezione{Specifica della campagna di validazione (collaudo incluso)}
-La campagna di validazione si svolger\`a in due fasi distinte. In entrambe le fasi il test consister\`a nell'esecuzione dell'applicativo per controllare che quanto descritto nell'analisi dei requisiti, la quale ha valore contrattuale, sia presente nel prodotto. Il test sar\`a guidato dagli \textit{use case} presenti nell'analisi dei requisiti.
+La campagna di validazione si svolger\`a in due fasi distinte:
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item Alpha test: verr\`a eseguito internamente all'azienda.
-\item Beta test: il prodotto verr\`a distribuito in modo limitato e controllato a persone esterne all'azienda.
+\item Alpha test: verr\`a eseguito internamente all'azienda. Il test consister\`a nell'esecuzione dell'applicativo per controllare che quanto descritto nell'analisi dei requisiti, la quale ha valore contrattuale, sia presente nel prodotto. Il test sar\`a guidato dagli \textit{use case} presenti nell'analisi dei requisiti.
+\item Beta test: il prodotto verr\`a distribuito al committente a fini di test.
 \end{elenconumerato}
 \subsezione{Dettaglio dell'esito della campagna di validazione}
 
