AR: aggiunti grafici UML Avvio/Interazione nel documento

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -207,9 +207,9 @@ Vengono riportati di seguito i casi d'uso, sia grafici che narrativi, utilizzati
 
 \subsezione{Avvio}
 Il seguente grafico descrive come ci si attende l'utente avvii l'applicazione.
-\begin{figure}
+\begin{figure}[!ht]
 \centering
-%\includegraphics{}
+\includegraphics{UCAvvio.png}
 \caption{avvio dell'applicazione}
 \end{figure}
 
@@ -236,7 +236,7 @@ Il seguente grafico descrive le interazioni tra l'utente finale e l'applicazione
 \begin{figure}[!ht]
 \centering
 \vspace{20pt} 
-%\includegraphics[width=1\textwidth]{UC0}
+\includegraphics{UCInterazione.png}
 \caption{funzionalit\`a dell'applicazione}
 \end{figure}
 
