AR: sistemato un accento

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -548,7 +548,7 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 \item L'utente seleziona la dimensione scelta nel combobox apposito all'interno di tale pannello, o inserisce un numero intero valido.
 \end{elenconumerato}
 \paragraph{Precondizioni}L'utente ha scelto una casella di testo presente nel canvas.
-\paragraph{Postcondizioni}Le proprietà degli stili grafici della casella di testo indicano che la dimensione del font \` e quella selezionata (parte del testo potrebbe essere troncata o non visibile)
+\paragraph{Postcondizioni}Le propriet\`a degli stili grafici della casella di testo indicano che la dimensione del font \` e quella selezionata (parte del testo potrebbe essere troncata o non visibile)
 
 \subsubsezione{UC10.3  Caso d'uso: imposta colore di riempimento}
 \paragraph{Attori coinvolti} Utente.
