PP: corretto errore ortografico

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -60,7 +60,7 @@ Versione: \insertversion
 
 %\setlength{\parindent}{18pt} %settato indentazione di default 
 \section*{\Large Sommario:}
-Il presente documento descrive l'anailisi dei costi e delle risorse effettuata dall'azienda WebShape per lo sviluppo del Capitolato C04.
+Il presente documento descrive l'analisi dei costi e delle risorse effettuata dall'azienda WebShape per lo sviluppo del Capitolato C04.
 
  %SEZIONE SOMMARIO
 \indent \indent
