--- a/doc/StudioFattibilita/StudioFattibilita.tex
+++ b/doc/StudioFattibilita/StudioFattibilita.tex
@@ -19,7 +19,7 @@
 
 \begin{center}
 	\begin{Huge}
-				\textbf{AjaxDraw}
+				\textbf{AJAXDRAW}
 	\end{Huge}
 \end{center}			
 
@@ -62,7 +62,7 @@ Versione: \insertversion
 \section*{\Large Sommario:} %SEZIONE SOMMARIO
 \indent \indent
 Considerazioni ricavate dallo studio di fattibilit\`{a} del capitolato d\'{}appalto C04, 
-Software per il Disegno Grafico in Tecnologie Web (in sigla AjaxDraw).
+Software per il Disegno Grafico in Tecnologie Web (in sigla AJAXDRAW).
 
 
 \section*{\Large Stato del documento:}
@@ -85,8 +85,7 @@ Software per il Disegno Grafico in Tecnologie Web (in sigla AjaxDraw).
 \section*{\LARGE Lista di Distribuzione:}
 
 	\begin{elenconumerato}{\normindent}
-		\item WebShape \footnote{Il termine WebShape designa una collettivit\`a di individui come da organigramma contenuto nel piano di progetto fornito in allegato al presente documento}
-		\item I committenti Vardanega Tullio e Conte Renato in rappresentanza \\  dell'azienda proponente Zucchetti SPA
+		\item WebShape 
 		%\item Il committente Conte Renato
 	\end{elenconumerato}
 
