aggiunti grafici di prova al pianodiprogetto

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -73,7 +73,6 @@ Il presente documento descrive l'anailisi dei costi e delle risorse effettuata d
 	\begin{elencopuntato}[\normindent]
 		\item[-] Dal Bosco Davide
 		\item[-] Cunico Marco
-		\item[-] Redattore N. 3
 	\end{elencopuntato}
 
 \section*{\Large Approvazione:}
@@ -231,9 +230,23 @@ In questa sottosezione presenteremo il nostro preventivo totale, comprendente i 
 da completare\\
 \subsezione{Pianificazione economico-temporale RR-RPP}
 da completare\\
-\subsezione{Pianificazione economico-temporale RPP-RPD}
-da completare\\
-\subsezione{Pianificazione economico-temporale RPD-RQ}
+\subsezione{Pianificazione economico-temporale RPP-RQ}
+\begin{figure}[!ht]
+\centering
+\vspace{20pt} 
+\includegraphics{RPP-RQ}
+\caption{RPP-RQ: costi/ruoli}
+\label{RPP-RQ}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\vspace{20pt} 
+\includegraphics{RPP-RQ-torta}
+\caption{RPP-RQ: ore/ruoli}
+\label{RPP-RQ ore}
+\end{figure}
+da notare che i grafici sono una prova, infatti i nomi sono sbagliati!\\
 da completare\\
 \subsezione{Pianificazione economico-temporale RQ-RA}
 da completare\\
