AR: modifiche a UC poligono

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -398,15 +398,16 @@ Il sistema permette all'utente di disegnare un quadrato o un rettangolo di quals
 \subsubsezione{UC9.3 Caso d'uso: disegna poligono}
 \paragraph{Attori coinvolti} Utente.
 \paragraph{Scopo e descrizione sintetica} 
-Il sistema permette all'utente di disegnare un poligono di qualsiasi dimensione.
+Il sistema permette all'utente di disegnare un poligono di qualsiasi dimensione e numero di vertici.
 \paragraph{Flusso di eventi}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
-\item L'utente seleziona il comando per disegnare un quadrato o un rettangolo.
-\item L'utente disegna sul canvas il quadrato o il rettangolo, scegliendo col cursore la sua dimensione.
-\item Il sistema disegna il quadrato/rettangolo.
+\item L'utente seleziona il comando per disegnare poligono.
+\item L'utente seleziona il numero di vertici del poligono che intende disegnare.
+\item L'utente disegna sul canvas il poligono, scegliendo col cursore la sua dimensione.
+\item Il sistema disegna il poligono.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \'e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra il nuovo quadrato/rettangolo disegnato.
+\paragraph{Postcondizioni} Il canvas mostra il nuovo poligono disegnato.
 
 \subsubsezione{UC9.4 Caso d'uso: disegna casella di testo}
 \paragraph{Attori coinvolti} Utente.
