aggiunto grafico di prova

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -226,6 +226,10 @@ In questa sottosezione presenteremo il nostro preventivo totale, comprendente i 
 	\end{center}	
 \end{table}
 
+\begin{center}
+\includegraphics[width=300pt]{grafico}
+\end{center}
+
 
 da completare\\
 \subsezione{Pianificazione economico-temporale RR-RPP}
